# otus_10_homework

./: .travis.yml  CMakeLists.txt  README.md  commands.cpp  commands.h  consumer.cpp  consumer.h  consumer_file.cpp  consumer_file.h  consumer_out.cpp  consumer_out.h  main.cpp  producer.cpp  producer.h  techstack.md  techstack.yml  tests.cpp  topic.cpp  topic.h
